# serializer version: 1
# name: test_groups_and_users
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_groups_and_users.1
  dict({
    'active': True,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'laura56',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users.2
  dict({
    'active': True,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'sjohnson',
    'id': 'fb085f7f',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users[job]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'age': 'tphorteObohEsZgfLWqS',
      'beat': -72199579.2991181,
      'face': -5262745923324.53,
      'local': 'ufCpVOLlelZEijfQSbBN',
      'product': 'SgBHsToacJDXWVcMKILU',
      'white': 'fVyRYryKwpMUVGtYHdeM',
    }),
    'created_at': datetime,
    'id': '7cf872dc',
    'ping': None,
    'progress': 10,
    'rights': dict({
    }),
    'stage': 'gukcXlhktChZZhvJTzVq',
    'state': <JobState.PREPARING: 'preparing'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'gukcXlhktChZZhvJTzVq',
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': 'zzIkFlrYUQbhnORELPde',
        'step_name': 'gukcXlhktChZZhvJTzVq',
        'timestamp': datetime,
      }),
    ]),
    'user': dict({
      'handle': 'laura56',
      'id': 'bf1b993c',
    }),
    'workflow': 'jobs_aodp',
  })
# ---
# name: test_jobs[job]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    }),
    'created_at': datetime,
    'id': 'fb085f7f',
    'ping': None,
    'progress': 10,
    'rights': dict({
    }),
    'stage': 'NzFJEUSgqMReEKilxKJT',
    'state': <JobState.PREPARING: 'preparing'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': 'bTDOKidKxUVFacqRcQYv',
        'step_name': 'NzFJEUSgqMReEKilxKJT',
        'timestamp': datetime,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'jobs_pathoscope_bowtie',
  })
# ---
# name: test_uploads[upload[reserved]]
  dict({
    'created_at': datetime,
    'id': 3,
    'name': 'test.fq.gz',
    'name_on_disk': '3-test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': True,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_uploads[upload[subtraction]]
  dict({
    'created_at': datetime,
    'id': 2,
    'name': 'test.fq.gz',
    'name_on_disk': '2-test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'subtraction',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_uploads[upload]
  dict({
    'created_at': datetime,
    'id': 1,
    'name': 'test.fq.gz',
    'name_on_disk': '1-test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
